--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ Part of the <a href=https://cuddler-webring.netlify.app/>Cuddler Webring</a>!<br
 <li><img src=assets/html2-8831.png width=88 height=31 alt="I dream in HTML">
 <li><img src=assets/8601-8831.gif width=88 height=31 alt="ISO 8601 now!">
 <li><a href=https://keepassxc.org/><img width=88 height=31 src=assets/keepassxc-8831.png alt="KeePassXC now!"></a>
-<li><a href=https://lemondemon.com><img src=assets/lemondemon-8831.png width=88 height=31 alt="Lemon Demon"></a>
+<li><a href=http://lemondemon.com><img src=assets/lemondemon-8831.png width=88 height=31 alt="Lemon Demon"></a>
 <li><a href=http://maplestrip.space><img width=88 height=31 alt="Maplestrip's Maple Tree" src=assets/mapletree-8831.png></a>
 <li><a href=https://discord.gg/6Czjtnv><img width=88 height=31 alt=Nothing src=assets/nothing-8831.png></a>
 <li><a href=http://www.libpng.org/pub/png><img width=88 height=31 alt="Portable Network Graphics Now!" src=assets/png-8831.png></a>
