--- a/about.html
+++ b/about.html
@@ -18,6 +18,7 @@ I was born on 2004-04-13<script>document.write("; I'm "+(new Date().getFullYear(
 <p>
 I like to make cool stuff. Usually this manifests digitally, as web development or other <a href=/portfolio>digital projects</a>, but can occasionally take the form of the physical.<br>
 I also like spending time with my friends, cuddling, and surfing the Web. (All at the same time? Perhaps.)<br>
-I am recreationally interested in linguistics (and who isn't these days, am I right? no; it's likely i'm just in a bubble of recreational linguists).
+I am recreationally interested in linguistics (and who isn't these days, am I right? no; it's likely i'm just in a bubble of recreational linguists).<br>
+My ideal existence is living with cuddly friend roommates and making cool stuff. (currently not fully achieved)
 <p>
 You can <a href=/contact>contact me via e-mail</a>.
