webring+header styles

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@ ul.buttons li {display:inline}
 .title h1 {
 	margin: 0;
 	font-weight: normal;
+	color: #fff;
 }
 .flashy {
 	font-size:18pt;
@@ -74,12 +75,15 @@ With such a diversity of interests as...
 </ul>
 </nav>
 <h2>Webrings</h2>
-<div class="webring outset">
+<div style="display:flex;flex-direction:row;flex-wrap:wrap;align-items:center;justify-content:center">
+<div class="webring outset" style=width:376px>
 Part of the <a href=https://cuddler-webring.netlify.app/>Cuddler Webring</a>!<br>
 <a href=https://cuddler-webring.netlify.app/mincerafter42/previous>«Cuddler Webring Previous</a>
 <a href=https://cuddler-webring.netlify.app/mincerafter42/next>Cuddler Webring Next»</a>
 </div>
+<iframe width=330 height=90 src="https://go.KIBI.family/WebRings/💀💖/embed/#/mincerafter42" sandbox="allow-scripts allow-same-origin allow-top-navigation" style="border:18pt solid;border-color:#f3ecff #c7c2d1 #c7c2d1 #f3ecff"></iframe>
 <aside>
+</div>
 <h2>Buttons & Badges</h2>
 <p id=my-button>My 88×31 button: <img src=assets/vivi-8831.png width=88 height=31 alt=Viatrix!> (make sure to include the alt text!)
 <ul class=buttons>
