updated ezine egirl webring iframe background colour that's my new password /j

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ Part of the <a href=https://cuddler-webring.netlify.app/>Cuddler Webring</a>!<br
 <a href=https://cuddler-webring.netlify.app/mincerafter42/previous>«Cuddler Webring Previous</a>
 <a href=https://cuddler-webring.netlify.app/mincerafter42/next>Cuddler Webring Next»</a>
 </div>
-<iframe width=330 height=90 src="https://go.KIBI.family/WebRings/💀💖/embed/#/mincerafter42" sandbox="allow-scripts allow-same-origin allow-top-navigation" style="border:18pt solid;border-color:#f3ecff #c7c2d1 #c7c2d1 #f3ecff"></iframe>
+<iframe width=330 height=90 src="https://go.KIBI.family/WebRings/💀💖/embed/#/mincerafter42" sandbox="allow-scripts allow-same-origin allow-top-navigation" style="border:18pt solid;border-color:#f3ecff #c7c2d1 #c7c2d1 #f3ecff;background-color:#dedbd9"></iframe>
 <aside>
 </div>
 <h2>Buttons & Badges</h2>
