new look for cuddler webring widget

--- a/index.html
+++ b/index.html
@@ -47,10 +47,13 @@ ul.buttons li {display:inline}
 .flashy a:hover, .flashy a:focus {
 	background: center / 100% 100% no-repeat url('assets/pointy.svg');
 }
-.webring {
-	background-color: #111;
-	border-color: #222 #0c0c0c #0c0c0c #222;
+.cuddler-webring {
+	background-color: #ffd8d8;
+	border-color: #fff0f0 #d09090 #d09090 #fff0f0;
+	color: #000;
+	font-family: "Comic Neue", "Atkinson Hyperlegible", sans-serif;
 }
+.cuddler-webring a {color:#303}
 #AdsDiv {position:sticky;top:0}
 </style>
 <aside id=AdsDiv><iframe src=assets/banner728x90.html width=728 height=90></iframe></aside>
@@ -76,7 +79,7 @@ With such a diversity of interests as...
 </nav>
 <h2>Webrings</h2>
 <div style="display:flex;flex-direction:row;flex-wrap:wrap;align-items:center;justify-content:center">
-<div class="webring outset" style=width:376px>
+<div class="cuddler-webring outset" style=width:376px>
 Part of the <a href=https://cuddler-webring.netlify.app/>Cuddler Webring</a>!<br>
 <a href=https://cuddler-webring.netlify.app/mincerafter42/previous>«Cuddler Webring Previous</a>
 <a href=https://cuddler-webring.netlify.app/mincerafter42/next>Cuddler Webring Next»</a>
