--- a/about.html
+++ b/about.html
@@ -14,11 +14,12 @@ I'm <abbr title="experiencing no sexual attraction">asexual</abbr> and <abbr tit
 I'm a <abbr title="partially girl">demigirl</abbr>, putting me under the <abbr title="Being neither 100% male 100% of the time nor 100% female 100% of the time">non-binary</abbr> and <abbr title="being a gender other than what you were assigned at birth (because people make assumptions about babies' genders before the babies even know gender is a thing)">trans</abbr> umbrellas.
 <br><a href=/labels>More about my titles and labels</a>
 <p>
-I was born on 2004-04-13<script>document.write("; I'm "+(new Date().getFullYear()-2004-(new Date().setMonth(3,13)>Date.now()))+' years old')</script>.
-<p>
 I like to make cool stuff. Usually this manifests digitally, as web development or other <a href=/portfolio>digital projects</a>, but can occasionally take the form of the physical.<br>
 I also like spending time with my friends, cuddling, and surfing the Web. (All at the same time? Perhaps.)<br>
 I am recreationally interested in linguistics (and who isn't these days, am I right? no; it's likely i'm just in a bubble of recreational linguists).<br>
 My ideal existence is living with cuddly friend roommates and making cool stuff. (currently not fully achieved)
+<p>
+I was born on 2004-04-13<script>document.write("; I'm "+(new Date().getFullYear()-2004-(new Date().setMonth(3,13)>Date.now()))+' years old')</script>.<br>
+I live in the Metro Vancouver area.
 <p>
 You can <a href=/contact>contact me via e-mail</a>.
