added neurodivergence to about

--- a/about.html
+++ b/about.html
@@ -13,6 +13,7 @@ My pronouns are she|they.
 I'm <abbr title="experiencing no sexual attraction">asexual</abbr> and <abbr title="experiencing little to no romantic attraction">aro-spec</abbr>.<br>
 I'm a <abbr title="partially girl">demigirl</abbr>, putting me under the <abbr title="Being neither 100% male 100% of the time nor 100% female 100% of the time">non-binary</abbr> and <abbr title="being a gender other than what you were assigned at birth (because people make assumptions about babies' genders before the babies even know gender is a thing)">trans</abbr> umbrellas.
 <br><a href=/labels>More about my titles and labels</a>
+<br>I'm <abbr title="brain functions differently from majority">neurodivergent</abbr>.
 <p>
 I like to make cool stuff. Usually this manifests digitally, as web development or other <a href=/portfolio>digital projects</a>, but can occasionally take the form of the physical.<br>
 I also like spending time with my friends, cuddling, and surfing the Web. (All at the same time? Perhaps.)<br>
