made rating text be part of rating link

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ With such a diversity of interests as...
 <li><a href=misc>Miscellaneous</a>
 </ul>
 </nav>
-<div>This site is rated <a href=http://www.mabsland.com/Adoption.html><img src=assets/Censor_PGa.png alt="Web PG"></a></div>
+<div><a href=http://www.mabsland.com/Adoption.html>This site is rated <img src=assets/Censor_PGa.png alt="Web PG"></a></div>
 <h2>Webrings</h2>
 <div style="display:flex;flex-direction:row;flex-wrap:wrap;align-items:center;justify-content:center">
 <div class="cuddler-webring outset" style=width:376px>
