Rearranged gay quiz code

--- a/gayquiz/index.html
+++ b/gayquiz/index.html
@@ -5,7 +5,7 @@
 <main>
 <h1>🏳️‍🌈Are you gay? Take this quiz🏳️‍🌈</h1>
 If you're wondering whether you're gay, this is the quiz to take!
-<form>
+<form action=result.html>
 <h2>What is your name?</h2>
 <label><input name=q1 type=radio required> Ryan</label><br>
 <label><input name=q1 type=radio> Viatrix the Internet Rando Extraordinaire</label><br>
@@ -30,5 +30,5 @@ If you're wondering whether you're gay, this is the quiz to take!
 <label><input name=q6 type=radio required> My eyes</label><br>
 <label><input name=q6 type=radio> My elbows</label><br>
 <label><input name=q6 type=radio> My mastery of Yamaha synthesizers</label>
-<hr><input type=submit formaction=result.html>
+<hr><input type=submit>
 </form></main>
