Added description to gay quiz

--- a/gayquiz/index.html
+++ b/gayquiz/index.html
@@ -2,6 +2,7 @@
 <html lang=en>
 <meta charset=utf-8>
 <title>Gay Quiz</title>
+<meta name=description content="If you're wondering whether you're gay, this is the quiz to take!">
 <main>
 <h1>🏳️‍🌈Are you gay? Take this quiz🏳️‍🌈</h1>
 If you're wondering whether you're gay, this is the quiz to take!
