image-rendering:pixelated

--- a/fun/index.html
+++ b/fun/index.html
@@ -7,6 +7,7 @@ body {font-family:sans-serif;background-color:#fbd;color:#000}
 * {margin:0}
 figure {float:right;width:min-content}
 figure:nth-of-type(odd) {float:left}
+img {image-rendering:pixelated}
 </style>
 <main>
 <h1>Fun</h1>
