Added 8601 award and other stuff to fun page

--- a/fun/index.html
+++ b/fun/index.html
@@ -12,7 +12,8 @@ img {image-rendering:pixelated}
 <main>
 <h1>Fun</h1>
 These floats are out of control!<br>
-Featuring quiz results, site awards, and fake ads.
+Featuring quiz results, site awards, and fake ads.<br>
+<a href=/>Back to Viatrix's home page</a>
 <figure><img src="balloons.gif" alt="balloons"/><figcaption>Balloons are fun, right? Oodles of fun! I'm having such fun with them!</figcaption></figure>
 
 <figure><img src=../gayquiz/resultlight.png width=192 height=165 alt="I'm gay! Find out whether you're gay with THE GAY QUIZ!">
@@ -37,7 +38,10 @@ Burma-Shive" width=328 height=300><figcaption>Made for the El Goonish Sh<b>i</b>
 <figure><img width=122 height=96 src=../assets/8601award-self.png alt="Viatrix's ISO 8601 Award!
 Viatrix the Internet Rando Extraordinaire
 Awarded 22/25/22">
-<figcaption>This is my own site award. It simultaneously expresses my like of <a href=https://en.wikipedia.org/wiki/ISO_8601>ISO 8601</a> and makes fun of date formats which are just 3 groups of 2 digits.
-If I encounter a personal website using ISO 8601, and I can contact the webmaster, I'll likely give this award!</figcaption></figure>
+<figcaption><a href=8601award.html>More about my ISO 8601 award</a></figcaption></figure>
+
+<figure><img src=time_travel.png width=266 height=311 alt="Woman: I've traveled here from the year 2004 to say this:
+Wanna see my website?
+Narrator: While it's technically true, I wish she'd stop prefacing every sentence with that."><figcaption>An edit of <a href=https://xkcd.com/630>xkcd: Time Travel</a></figcaption></figure>
 
 </main>
