m15o's site now has the badge

--- a/fun/8601award.html
+++ b/fun/8601award.html
@@ -16,7 +16,7 @@ Awarded 22/25/22"></figure>
 See which sites have accepted the award!
 <ul>
 <li><span class=linkless>Viatrix the Internet Rando Extraordinaire</span> (myself) — Awarded 22/25/22
-<li><a href=https://m15o.ichi.city/site/home.html>m15o</a> — Awarded 22/26/22 (no badge on site yet)
+<li><a href=https://m15o.ichi.city/site/iso8601.html>m15o</a> — Awarded 22/26/22
 </ul>
 <h2>Can I get the award?</h2>
 <p>If you want the award for yourself, you can <a href=/contact>contact me</a> and ask. Make sure to link to your website!
