Added hit counter

--- a/index.html
+++ b/index.html
@@ -130,4 +130,5 @@ Part of the <a href=https://cuddler-webring.netlify.app/>Cuddler Webring</a>!<br
 </main>
 <footer>
 Last updated {{page.last_modified_at|default:page.date|default:site.time|date:"%F"}}. <a href=/updates>Updates archive</a>
+<script>document.write("You are visitor #")</script><script src="//freehostedscripts.net/ocount.php?site=2222222"></script><script>document.write(" since 2022-07-04")</script>
 </footer>
