Added counters 2100 for index because the first month got ≈100 views

--- a/index.html
+++ b/index.html
@@ -129,5 +129,6 @@ Part of the <a href=https://cuddler-webring.netlify.app/>Cuddler Webring</a>!<br
 </aside>
 </main>
 <footer>
+<a href=https://www.websiteout.ca/counter.php><img alt src="//counter.websiteout.net/compte.php?S=mincerafter42.github.io&C=7&N=2100&M=1"></a><br>
 Last updated {{page.last_modified_at|default:page.date|default:site.time|date:"%F"}}. <a href=/updates>Updates archive</a>
 </footer>
