changed iso8601 counter

--- a/fun/8601award.html
+++ b/fun/8601award.html
@@ -22,7 +22,7 @@ See which sites have accepted the award!
 <p>If you want the award for yourself, you can <a href=/contact>contact me</a> and ask. Make sure to link to your website!
 </main>
 <footer>
-<a href=https://www.websiteout.ca/counter.php><img alt src="//counter.websiteout.net/compte.php?S=mincerafter42.github.io/fun/8601award&C=2&D=6&M=1" style="border:6px solid #bdbdbd"></a><br>
+<a href=https://www.websiteout.ca/counter.php><img alt src="//counter.websiteout.net/compte.php?S=mincerafter42.github.io/fun/8601award&C=6&D=6&M=1" style="border:6px solid #bdbdbd;filter:hue-rotate(120deg) brightness(2)"></a><br>
 <a href=/>Return to Viatrix's home page</a>
 </footer>
 <!--This page gives me such <center>+<font> vibes. despite not using either, it's got the ✨vibes✨-->
