Added fun page to index and moved quotes to fun.

--- a/fun/index.html
+++ b/fun/index.html
@@ -12,7 +12,7 @@ img {image-rendering:pixelated}
 <main>
 <h1>Fun</h1>
 These floats are out of control!<br>
-Featuring quiz results, site awards, and fake ads.<br>
+Featuring quiz results, site awards fake ads, and more randomness.<br>
 <a href=/>Back to Viatrix's home page</a>
 <figure><img src="balloons.gif" alt="balloons"/><figcaption>Balloons are fun, right? Oodles of fun! I'm having such fun with them!</figcaption></figure>
 
@@ -39,6 +39,8 @@ Burma-Shive" width=328 height=300><figcaption>Made for the El Goonish Sh<b>i</b>
 Viatrix the Internet Rando Extraordinaire
 Awarded 22/25/22">
 <figcaption><a href=8601award.html>More about my ISO 8601 award</a></figcaption></figure>
+
+<figure><a href=/quotes>Viatrix Out Of Context</a></figure>
 
 <figure><img src=time_travel.png width=266 height=311 alt="Woman: I've traveled here from the year 2004 to say this:
 Wanna see my website?
