--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@ With such a diversity of interests as...
 <li><a href=cuddle>Cuddling</a>
 <li><a href=other-web-sites>Web Sites</a>
 <li><a href=webmastery>Webmastery</a>
+<li><a href=fun>Fun</a>
 <li><a href=misc>Miscellaneous</a>
 </ul>
 </nav>
