i think space-evenly looks better here actualy

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ Part of the <a href=https://cuddler-webring.netlify.app/>Cuddler Webring</a>!<br
 <div class="transring outset">
 <a href=https://sugarforbrains.neocities.org/transring/index.html><img src=assets/transring/webringbutton.png alt="Transing The Internet Webring" width=168 height=39 style=padding:2px></a><br>
 <iframe width=168 height=24 style=border:0 srcdoc="
-<style>body{margin:0;color:#fff;display:flex;justify-content:center}img{display:block}a:hover img,a:focus img{background-color:#ff28ff}</style><body>
+<style>body{margin:0;color:#fff;display:flex;justify-content:space-evenly}img{display:block}a:hover img,a:focus img{background-color:#ff28ff}</style><body>
 <noscript>But without Javascript, it's just a web list.</noscript>
 <script src=https://sugarforbrains.neocities.org/transring/onionring-variables.js></script>
 <script>var selfIndex = sites.indexOf('https://mincerafter42.github.io');
