updated iso8601 award

--- a/fun/8601award.html
+++ b/fun/8601award.html
@@ -16,6 +16,7 @@ Awarded 22/25/22"></figure>
 See which sites have accepted the award!
 <ul>
 <li><span class=linkless>Viatrix the Internet Rando Extraordinaire</span> (myself) — Awarded 22/25/22
+<li><a href=https://josef.neocities.org/misc.html>josef's neocities zone</a> — Awarded 22/25/22
 <li><a href=https://m15o.ichi.city/site/iso8601.html>m15o</a> — Awarded 22/26/22
 </ul>
 <h2>Can I get the award?</h2>
