--- a/fun/8601award.html
+++ b/fun/8601award.html
@@ -20,7 +20,7 @@ See which sites have accepted the award!
 <li><a href=https://m15o.ichi.city/site/iso8601.html>m15o</a> — Awarded 22/26/22
 </ul>
 <h2>Can I get the award?</h2>
-<p>If you want the award for yourself, you can <a href=/contact>contact me</a> and ask. Make sure to link to your website!
+<p>If you want the award for yourself, or for another's website, you can <a href=/contact>contact me</a> and ask. Make sure to link to the website!
 </main>
 <footer>
 <a href=https://www.websiteout.ca/counter.php><img alt src="//counter.websiteout.net/compte.php?S=mincerafter42.github.io/fun/8601award&C=6&D=6&M=1" style="border:6px solid #5f5f5f;filter:hue-rotate(120deg) brightness(2)"></a><br>
