abichrome acepted the 8601 award

--- a/fun/8601award.html
+++ b/fun/8601award.html
@@ -18,6 +18,7 @@ See which sites have accepted the award!
 <li><span class=linkless>Viatrix the Internet Rando Extraordinaire</span> (myself) — Awarded 22/25/22
 <li><a href=https://josef.neocities.org/misc.html>josef's neocities zone</a> — Awarded 22/25/22
 <li><a href=https://m15o.ichi.city/site/iso8601.html>m15o</a> — Awarded 22/26/22
+<li><span class=linkless>abichrome</span> — Awarded 23/16/22 (custom palette: transparent background!)
 </ul>
 <h2>Can I get the award?</h2>
 <p>If you want the award for yourself, or for another's website, you can <a href=/contact>contact me</a> and ask. Make sure to link to the website!
