--- a/fun/8601award.html
+++ b/fun/8601award.html
@@ -19,6 +19,7 @@ See which sites have accepted the award!
 <li><a href=https://josef.neocities.org/misc.html>josef's neocities zone</a> — Awarded 22/25/22
 <li><a href=https://m15o.ichi.city/site/iso8601.html>m15o</a> — Awarded 22/26/22
 <li><span class=linkless>abichrome</span> — Awarded 23/16/22 (custom palette: transparent background!)
+<li><a href=https://seirdy.one/meta/#iso-8601>Seirdy's Home</a> — Awarded 23/17/22
 </ul>
 <h2>Can I get the award?</h2>
 <p>If you want the award for yourself, or for another's website, you can <a href=/contact>contact me</a> and ask. Make sure to link to the website!
