minor rewords and edits gave some of the links from the index have some hover text made the about page link more to my interests

--- a/about.html
+++ b/about.html
@@ -15,9 +15,9 @@ I'm a <abbr title="partially girl">demigirl</abbr>, putting me under the <abbr t
 <br><a href=/labels>More about my titles and labels</a>
 <br>I'm <abbr title="brain functions differently from majority">neurodivergent</abbr>.
 <p>
-I like to make cool stuff. Usually this manifests digitally, as web development or other <a href=/portfolio>digital projects</a>, but can occasionally take the form of the physical.<br>
-I also like spending time with my friends, cuddling, and surfing the Web. (All at the same time? Perhaps.)<br>
-I am recreationally interested in linguistics (and who isn't these days, am I right? no; it's likely i'm just in a bubble of recreational linguists).<br>
+I like to make cool stuff. Usually this manifests digitally, as <a href=/webmastery>web development</a> or other <a href=/portfolio>digital projects</a>, but can occasionally take the form of the physical.<br>
+I also like spending time with my friends, <a href=/cuddle>cuddling</a>, and surfing <a href=/other-web-sites>the Web</a>. (All at the same time? Perhaps.)<br>
+I am recreationally interested in linguistics (and who isn't these days, am I right? no; it's likely i'm just in a bubble of recreational linguists).<br>I also dabble occasionally into <a href=/crafts>crafts</a>.<br>
 My ideal existence is living with cuddly friend roommates and making cool stuff. (currently not fully achieved)
 <p>
 I was born on 2004-04-13<script>document.write("; I'm "+(new Date().getFullYear()-2004-(new Date().setMonth(3,13)>Date.now()))+' years old')</script>.<br>
