more 8601 award tweaks

--- a/fun/8601award.html
+++ b/fun/8601award.html
@@ -9,30 +9,27 @@
 <p><span style=font-family:sans-serif;color:#db1092>Viatrix's</span> <span style=font-family:cursive;color:#1177c9>ISO 8601 Award</span>
 is an award I give to personal websites I encounter using <a href=https://en.wikipedia.org/wiki/ISO_8601>ISO 8601</a> (if I can contact the webmaster).<br>
 It shows my like of ISO 8601, and trolls anyone trying to read the Awarded date.<br>Awardees are encouraged to place the badge on their websites and link to this very page of exposition.
-<!--<figure><figcaption>The award badge looks like this</figcaption>
-<img width=122 height=96 src=../assets/8601award-self.png alt="Viatrix's ISO 8601 Award!
-Viatrix the Internet Rando Extraordinaire
-Awarded 22/25/22"></figure>-->
 <p>The award badge is available with a light or dark background:<br>
 <img src=8601-231922-light.png width=122 height=96 alt="[Light background]
 Viatrix's ISO 8601 Award! 
 <insert the name of the website here>
-Awarded QQ/QQ/QQ"> <img src=8601-231922-dark.png width=122 height=96 alt="[Dark background]
+Awarded QQ/QQ/QQ">
+<img src=8601-231922-dark.png width=122 height=96 alt="[Dark background]
 Viatrix's ISO 8601 Award! 
 <insert the name of the website here>
-Awarded QQ/QQ/QQ"><br>
+Awarded 00/00/00"><br>
 The colour contrast conforms to WCAG level AA for both backgrounds.</p>
 <details><summary>Prior to 23/19/22, only the light background badge was available:</summary>
 <img width=122 height=96 src=../assets/8601award-self.png alt="Viatrix's ISO 8601 Award!
 Viatrix the Internet Rando Extraordinaire
-Awarded 22/25/22"></details>
+Awarded 00/00/00"></details>
 <h2>Awarded sites</h2>
 See which sites have accepted the award!
 <ul>
 <li><span class=linkless>Viatrix the Internet Rando Extraordinaire</span> (myself) — Awarded 22/25/22
 <li><a href=https://josef.neocities.org/misc.html>josef's neocities zone</a> — Awarded 22/25/22
 <li><a href=https://m15o.ichi.city/site/iso8601.html>m15o</a> — Awarded 22/26/22
-<li><span class=linkless>abichrome</span> — Awarded 23/16/22 (custom palette: transparent background!)
+<li><span class=linkless>abichrome</span> — Awarded 23/16/22 (custom palette: transparent background)
 <li><a href=https://seirdy.one/meta/#iso-8601>Seirdy's Home</a> — Awarded 23/17/22
 <li><a href=https://spidertown.neocities.org>Spider Town</a> — Awarded 23/17/22 (inverted colours)
 </ul>
