--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@ document.write(`<a href='${sites[(selfIndex+1)%sites.length]}' target=_parent><i
 </div>
 <aside>
 <h2>Buttons & Badges</h2>
-<p id=my-button>My 88×31 button: <img src=assets/vivi-8831.png width=88 height=31 alt=Viatrix!> (make sure to include the alt text!)
+<p id=my-button>My 88×31 button: <img src=assets/vivi-8831.png width=88 height=31 alt=Viatrix.> (make sure to include the alt text!)
 <ul class=buttons>
 <li><img alt="0% religion" width=80 height=15 src=assets/0-8015.png>
 <li><a href=https://88by31.neocities.org/><img width=88 height=31 src=assets/8831-8831.png alt=88by31></a>
