Added results of Kirby Kevinson's Awkward Questionnaire

--- a/fun/index.html
+++ b/fun/index.html
@@ -24,7 +24,7 @@ You are a very social, confident, and impulsive person. You can be a bit quick t
 <figure><figcaption><a href="http://www.theotaku.com/quizzes/view/3965/what_anime_hair_color_would_you_have%3F">What Anime Hair Color Would You Have?</a></figcaption>
 <img width=400 height=200 src="http://www.theotaku.com/guru_results/3965_Green.jpg" alt="Green
 Easy-going and of raw energy. You tend to be close to the earth. You are extremely loyal to your friends and bring a unique perspective to the world around you."></figure>
-<!--<hr style=clear:both>-->
+<a href=kkaq.html>The results of Kirby Kevinson's Awkward Questionnaire</a>
 
 <figure><img src=../assets/cakes.jpg alt="Free cakes in your area
 Sign up now!!" width=336 height=280><figcaption>Inspired by my <a href=/labels#aro-spec>comparison of romance to free cake</a></figcaption></figure>
