--- a/fun/8601award.html
+++ b/fun/8601award.html
@@ -26,6 +26,7 @@ See which sites have accepted the award!
 <li><a href=https://spidertown.neocities.org>Spider Town</a> — Awarded 23/17/22 (inverted colours)
 <li><a href=https://www.auramgold.com>auramgold</a> — Awarded 23/17/22 (no badge on site yet)
 <li><a href=https://seapunk.xyz>CPNK</a> — Awarded 23/21/22 (no badge on site yet)
+<li><a href=https://kirby.kevinson.org>Kirby Kevinson</a> — Awarded 23/22/22 (no badge on site yet)
 </ul>
 <h2>Can I get the award?</h2>
 <p>If you want the award for yourself, or for another's website, you can <a href=/contact>contact me</a> and ask. Make sure to link to the website!
