*gay gloves* and also made NB flags image hosted internally

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: none
-last_modified_at: 2022-07-06
+last_modified_at: 2022-07-19
 ---
 <!DOCTYPE html>
 <html lang=en>
@@ -63,7 +63,7 @@ a:not(:hover):not(:focus) + .moreinfo {left:-9999px;}
 <aside id=AdsDiv><iframe src=assets/banner728x90.html width=728 height=90></iframe></aside>
 <main>
 Welcome to the web site of...<br>
-<!--<img src="https://placeholder.invalid" alt width=600 height=600> (note to self: put a photograph here sometime)-->
+<img src="assets/gayglove.jpg" alt width=530 height=500><br>
 <div class="title outset">
 <h1>Viatrix</h1>
 Internet Rando Extraordinaire!
