Catscape Meow! + optimized gifs

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: none
-last_modified_at: 2022-07-19
+last_modified_at: 2022-07-22
 ---
 <!DOCTYPE html>
 <html lang=en>
@@ -82,7 +82,8 @@ With such a diversity of webpages as...
 <li><a href=misc>Miscellaneous</a>
 </ul>
 </nav>
-<div><a href=http://www.mabsland.com/Adoption.html>This site is rated <img src=assets/Censor_PGa.png alt="Web PG"></a></div>
+<div><a href=http://www.mabsland.com/Adoption.html>This site is rated <img src=assets/Censor_PGa.png alt="Web PG"></a>
+<br>(but links to other sites may be more explicit without warning)</div>
 <h2>Webrings</h2>
 <p>A <dfn>webring</dfn> is a group of websites wherein each website links to two other websites, collectively forming a ring structure.
 <div style="display:flex;flex-direction:row;flex-wrap:wrap;align-items:center;justify-content:center">
@@ -115,6 +116,7 @@ document.write(`<a href='${sites[(selfIndex+1)%sites.length]}' target=_parent><i
 <li><img width=88 height=31 src=assets/bestviewed-8831.png alt="Best viewed with a browser">
 <li><img width=88 height=31 src=assets/bookmark-8831.png alt="Bookmark this page!">
 <li><a href=https://buymeacoffee.com/mincerafter42><img src=assets/bmac-8831.png width=88 height=31 alt="Buy me a coffee (I don't even drink coffee lol)"></a>
+<li><img width=88 height=31 src=assets/catscape.gif alt="Catscape Meow!">
 <li><img width=80 height=15 src=assets/cuddly-8015.gif alt="Cute + Cuddly">
 <li><a href=https://egscomics.com><img width=88 height=31 alt="El Goonish Shive" src=assets/egs-8831.png></a>
 <li><a href=/contact><img width=80 height=15 src=assets/email-8015.png alt="E-mail me"></a>
@@ -124,7 +126,7 @@ document.write(`<a href='${sites[(selfIndex+1)%sites.length]}' target=_parent><i
 <li><a href=https://mincerafter42.github.io/fillbert><img width=88 height=31 alt="Fillbert Comix" src=assets/fillbert-8831.svg></a>
 <li><a href=https://gimp.org><img width=90 height=33 alt="Graphics by GIMP" style="margin-top:-3px" src=assets/gimp-9033.png></a>
 <li><img src=assets/html-8831.png width=88 height=31 alt="HTML: Learn it now!">
-<li><img src=assets/can-8831.png width=88 height=31 alt="I am Canadian">
+<li><img src=assets/can-8831.gif width=88 height=31 alt="I am Canadian">
 <li><img src=assets/html2-8831.png width=88 height=31 alt="I dream in HTML">
 <li><img src=assets/8601-8831.gif width=88 height=31 alt="ISO 8601 now!">
 <li><a href=https://keepassxc.org/><img width=88 height=31 src=assets/keepassxc-8831.png alt="KeePassXC now!"></a>
