--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: none
-last_modified_at: 2022-07-22
+last_modified_at: 2022-07-25
 ---
 <!DOCTYPE html>
 <html lang=en>
@@ -131,6 +131,7 @@ document.write(`<a href='${sites[(selfIndex+1)%sites.length]}' target=_parent><i
 <li><img src=assets/8601-8831.gif width=88 height=31 alt="ISO 8601 now!">
 <li><a href=https://keepassxc.org/><img width=88 height=31 src=assets/keepassxc-8831.png alt="KeePassXC now!"></a>
 <li><a href=http://lemondemon.com><img src=assets/lemondemon-8831.png width=88 height=31 alt="Lemon Demon"></a>
+<li><img width=88 height=31 src=assets/linux-8831.png alt="Linux now!">
 <li><a href=http://maplestrip.space><img width=88 height=31 alt="Maplestrip's Maple Tree" src=assets/mapletree-8831.png></a>
 <li><a href=https://discord.gg/6Czjtnv><img width=88 height=31 alt=Nothing src=assets/nothing-8831.png></a>
 <li><a href=http://www.libpng.org/pub/png><img width=88 height=31 alt="Portable Network Graphics Now!" src=assets/png-8831.png></a>
