Added Runegod button

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: none
-last_modified_at: 2022-07-25
+last_modified_at: 2022-07-30
 ---
 <!DOCTYPE html>
 <html lang=en>
@@ -137,6 +137,7 @@ document.write(`<a href='${sites[(selfIndex+1)%sites.length]}' target=_parent><i
 <li><a href=http://www.libpng.org/pub/png><img width=88 height=31 alt="Portable Network Graphics Now!" src=assets/png-8831.png></a>
 <li><img src=assets/pride-8831.png width=88 height=31 alt="Pride now!">
 <li><a href=https://reallifecomics.com/><img width=88 height=31 alt="Real Life Comics" src=assets/reallife-8831.png></a>
+<li><a href=https://runegod.net><img width=88 height=31 alt="Webcomics — Runegod" src=assets/rune-8831.png></a>
 <li><img width=88 height=31 alt="Scalable Vector Graphics Now!" src=assets/svg-8831.svg>
 <li><img width=88 height=31 src=assets/schoolsucks-8831.png alt="School sucks forever!">
 <li><a href=https://dragonflycave.com><img width=88 height=31 alt="The Cave of Dragonflies" src=assets/tcod-8831.png></a>
