Added thunderbird joke

--- a/fun/index.html
+++ b/fun/index.html
@@ -45,5 +45,8 @@ Awarded 22/25/22">
 <figure><img src=time_travel.png width=266 height=311 alt="Woman: I've traveled here from the year 2004 to say this:
 Wanna see my website?
 Narrator: While it's technically true, I wish she'd stop prefacing every sentence with that."><figcaption>An edit of <a href=https://xkcd.com/630>xkcd: Time Travel</a></figcaption></figure>
+<figure><img src=thunderbird.png width=320 height=288 alt="Portrait Mail from a Gen Ⅱ Pokémon game; the portrait is of Zapdos and the mail reads:
+Look at our cool e-mail client!
+— Mozilla"></figure>
 
 </main>
