Updated Kirby Kevinson's link

--- a/fun/8601award.html
+++ b/fun/8601award.html
@@ -26,7 +26,7 @@ See which sites have accepted the award!
 <li><a href=https://spidertown.neocities.org>Spider Town</a> — Awarded 23/17/22 (inverted colours)
 <li><a href=https://www.auramgold.com>auramgold</a> — Awarded 23/17/22 (no badge on site yet)
 <li><a href=https://seapunk.xyz>CPNK</a> — Awarded 23/21/22 (no badge on site yet)
-<li><a href=https://kirby.kevinson.org/lists/award-wall/>Kirby Kevinson</a> — Awarded 23/22/22 (recreated in CSS)
+<li><a href=https://k.bruh.ltd/lists/award-wall/#iso-8601>Kirby Kevinson</a> — Awarded 23/22/22 (recreated in CSS)
 <li><a href=https://clouded.neocities.org>clouded</a> — Awarded 23/25/22 (no badge on site yet)
 <li><a href=https://eventide.space>The Eventide Space</a> — Awarded 24/17/22
 </ul>
