Added short form strings feed

--- a/fun/index.html
+++ b/fun/index.html
@@ -40,7 +40,7 @@ Viatrix the Internet Rando Extraordinaire
 Awarded 22/25/22">
 <figcaption><a href=8601award.html>More about my ISO 8601 award</a></figcaption></figure>
 
-<figure><a href=/quotes>Viatrix Out Of Context</a></figure>
+<figure><a href=/ssss/index.xml>Viatrix Out Of Context</a></figure>
 
 <figure><img src=time_travel.png width=266 height=311 alt="Woman: I've traveled here from the year 2004 to say this:
 Wanna see my website?
