Replaced "Best viewed with a browser" with "ANY Web browser" it was a cool button, Key, i just felt like changing it '^_^

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: none
-last_modified_at: 2022-07-30
+last_modified_at: 2022-09-16
 ---
 <!DOCTYPE html>
 <html lang=en>
@@ -111,9 +111,9 @@ document.write(`<a href='${sites[(selfIndex+1)%sites.length]}' target=_parent><i
 <ul class=buttons>
 <li><img alt="0% religion" width=80 height=15 src=assets/0-8015.png>
 <li><a href=https://88by31.neocities.org/><img width=88 height=31 src=assets/8831-8831.png alt=88by31></a>
+<li><a href=http://www.anybrowser.org/campaign/><img width=88 height=31 src=assets/anyweb-8831.png alt="ANY Web browser"></a>
 <li><img src=assets/2038-8831.gif width=88 height=31 alt="Are you ready? Year 2038">
 <li><img src=assets/acceptancenow-8831.png width=88 height=31 alt="Autistic acceptance now!">
-<li><img width=88 height=31 src=assets/bestviewed-8831.png alt="Best viewed with a browser">
 <li><img width=88 height=31 src=assets/bookmark-8831.png alt="Bookmark this page!">
 <li><a href=https://buymeacoffee.com/mincerafter42><img src=assets/bmac-8831.png width=88 height=31 alt="Buy me a coffee (I don't even drink coffee lol)"></a>
 <li><img width=88 height=31 src=assets/catscape.gif alt="Catscape Meow!">
