Added delovely links + Getting Started with WWW (1992)

--- a/index.html
+++ b/index.html
@@ -118,6 +118,7 @@ document.write(`<a href='${sites[(selfIndex+1)%sites.length]}' target=_parent><i
 <li><a href=https://buymeacoffee.com/mincerafter42><img src=assets/bmac-8831.png width=88 height=31 alt="Buy me a coffee (I don't even drink coffee lol)"></a>
 <li><img width=88 height=31 src=assets/catscape.gif alt="Catscape Meow!">
 <li><img width=80 height=15 src=assets/cuddly-8015.gif alt="Cute + Cuddly">
+<li><a href=https://delovely.neocities.org><img width=88 height=31 src=assets/delovely-8831.png alt=delovely></a>
 <li><a href=https://egscomics.com><img width=88 height=31 alt="El Goonish Shive" src=assets/egs-8831.png></a>
 <li><a href=/contact><img width=80 height=15 src=assets/email-8015.png alt="E-mail me"></a>
 <li><a href=/feed.atom><img width=80 height=15 alt="Atom Feed" src=assets/atom-8015.png></a>
