--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@ If you use diæreses in English, then my name would be written Viätrix because 
 I'm also known as mincerafter42 on other platforms, so you can call me mincerafter42, mincerafter, or mince.
 <p>
 My pronouns are she|they.
-I'm <abbr title="experiencing no sexual attraction">asexual</abbr> and <abbr title="experiencing little to no romantic attraction">aro-spec</abbr>.<br>
+I'm <abbr title="experiencing no sexual attraction">asexual</abbr> and <abbr title="experiencing no romantic attraction">aromantic</abbr>.<br>
 I'm a <abbr title="partially girl">demigirl</abbr>, putting me under the <abbr title="Being neither 100% male 100% of the time nor 100% female 100% of the time">non-binary</abbr> and <abbr title="being a gender other than what you were assigned at birth (because people make assumptions about babies' genders before the babies even know gender is a thing)">trans</abbr> umbrellas.
 <br><a href=/labels>More about my titles and labels</a>
 <br>I'm <abbr title="brain functions differently from majority">neurodivergent</abbr>.
