--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@ document.write(`<a href='${sites[(selfIndex+1)%sites.length]}' target=_parent><i
 <li><img width=88 height=31 src=assets/schoolsucks-8831.png alt="School sucks forever!">
 <li><a href=https://dragonflycave.com><img width=88 height=31 alt="The Cave of Dragonflies" src=assets/tcod-8831.png></a>
 <li><img src=assets/antinft-8831.png width=88 height=31 alt="This is an anti-NFT site">
-<li><img width=88 height=31 alt="This user is aro-spec, a demigirl, trans, nonbinary, and asexual" src=assets/ident-8831.gif>
+<li><img width=88 height=31 alt="This user is aromantic, a demigirl, trans, nonbinary, and asexual" src=assets/ident-8831.gif>
 <li><a href=https://transrats.neocities.org/><img width=88 height=33 alt="Trans Rats" src=assets/transrats-8833.gif style="margin:-1px 0"></a>
 <li><a href=https://github.com/gorhill/uBlock#ublock-origin><img width=88 height=31 src=assets/ublocko-8831.png alt="uBlock Origin now!"></a>
 <li><img width=97 height=31 alt="World Wide Web: Connecting people since 1991" src=assets/www-9731.png>
