--- a/fun/index.html
+++ b/fun/index.html
@@ -48,5 +48,6 @@ Narrator: While it's technically true, I wish she'd stop prefacing every sentenc
 <figure><img src=thunderbird.png width=320 height=288 alt="Portrait Mail from a Gen Ⅱ Pokémon game; the portrait is of Zapdos and the mail reads:
 Look at our cool e-mail client!
 — Mozilla"></figure>
+<figure><img src=moon.svg width=400 height=240 alt="An animated comparison of the moon's phases with its phases in ‘Sailor Moon’: ‘Sailor Moon’'s is always either full or an impossible crescent"></figure>
 
 </main>
