Updated links to Ruby Klover

--- a/fun/kkaq.html
+++ b/fun/kkaq.html
@@ -2,8 +2,8 @@
 permalink: /fun/kkaq.html
 layout: none
 ---
-<!doctype html><html lang=en><meta charset=utf-8><title>Kirby Kevinson's Awkward Questionnaire</title>
-{% capture md %}# [Kirby Kevinson's Awkward Questionnaire](https://kirby.kevinson.org/blog/an-awkward-questionnaire/)
+<!doctype html><html lang=en><meta charset=utf-8><title>Ruby Klover's Awkward Questionnaire</title>
+{% capture md %}# [Ruby Klover's Awkward Questionnaire](https://www.bruh.ltd/blog/an-awkward-questionnaire/)
 
 Filled out 2022-07-18.
 
