Added tomxcd to 8601award

--- a/fun/8601award.html
+++ b/fun/8601award.html
@@ -30,6 +30,7 @@ See which sites have accepted the award!
 <li><a href=https://clouded.neocities.org>clouded</a> — Awarded 23/25/22 (no badge on site yet)
 <li><a href=https://eventide.space>The Eventide Space</a> — Awarded 24/17/22
 <li><a href=https://zeusofthecrows.github.io/stadt/links/#my-awards>Ɀeus' Stadt</a> — Awarded 28/25/22
+<li><a href=https://tomxcd.me/>tomxcd</a> — Awarded 30/19/22
 </ul>
 <h2>Can I get the award?</h2>
 <p>If you want the award for yourself, or for another's website, you can <a href=/contact>contact me</a> and ask. Make sure to link to the website!
